--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,10 @@ body {
     padding-right: 7vw;
 }
 
+.hidden {
+    display: none;
+}
+
 ul {
     list-style-type: none;
 }
@@ -87,7 +91,19 @@ form {
     gap: 1.39vw;
 }
 
+.menu__wrapper {
+    position: relative;
+    width: 11.81vw;
+    height: 4.8vw;
+    transition: all .3s;
+}
+
+.wrapper__stretched {
+    width: 46.32vw;
+}
+
 .dropdown {
+    position: absolute;
     width: 11.81vw;
     height: 4.8vw;
     max-width: 11.81vw;
@@ -96,6 +112,7 @@ form {
     overflow: hidden;
     color: #FFF;
     transition: all .4s;
+    z-index: 3;
 }
 
 .dropdown__activated {
@@ -110,6 +127,10 @@ form {
     grid-template-columns: 75% 25%;
     height: 4.8vw;
     position: relative;
+}
+
+.dropdown header:hover {
+    cursor: pointer;
 }
 
 .dropdown header form {
@@ -131,6 +152,10 @@ form {
     font-size: 1.25vw;
 }
 
+.dropdown__activated header form input::placeholder {
+    opacity: 0.5;
+}
+
 .dropdown header form input::placeholder {
     color: #FFF;
     font-size: 1.25vw;
@@ -140,6 +165,11 @@ form {
     position: absolute;
     right: 1.25vw;
     top: calc(2.4vw - 8px);
+    transition: transform .3s;
+}
+
+.dropdown__activated header i {
+    transform: rotate(180deg);
 }
 
 .ingredients__menu {
