--- a/css/styles.css
+++ b/css/styles.css
@@ -107,7 +107,7 @@ form {
     border-radius: 5px;
     overflow: hidden;
     color: #FFF;
-    transition: all .4s;
+    transition: width .5s cubic-bezier(0.33, 1, 0.68, 1) 0s, max-height 1s cubic-bezier(0.33, 1, 0.68, 1) 0.5s;
     z-index: 3;
 }
 
@@ -146,7 +146,11 @@ form {
     font-size: 1.25vw;
 }
 
-.dropdown header i {
+.dropdown header span:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.dropdown header span i {
     position: absolute;
     display: block;
     right: 1.25vw;
@@ -186,47 +190,32 @@ form {
 
 .dropdown__list ul li {
     width: fit-content;
+    padding: 2px 5px;
+    box-sizing: border-box;
+    border: 1px solid transparent;
 }
 
 .dropdown__list ul li:hover {
-    width: fit-content;
-    cursor: pointer
+    cursor: pointer;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
 }
 
 /* Dropdown Activating */
 
 .dropdown__activating {
-    animation: .5s ease-out dropdown__activating_x 0s,
-     .5s ease-out .5s dropdown__activating_y;
+     max-height: 27.57vw;
+     height: fit-content;
+     width: 46.32vw;
+     max-width: 46.32vw;
     animation-fill-mode: forwards;
     padding-bottom: 1.39vw;
 }
 
-@keyframes dropdown__activating_x {
-
-0% {
-    max-width: 11.81vw;
+.dropdown__activating header i {
+    transform: rotate(180deg);
 }
-
-100% {
-    width: 46.32vw;
-    max-width: 46.32vw;
-}
-
-}
-
-@keyframes dropdown__activating_y {
-
-    0% {
-        height: 4.8vw;
-    }
-    
-    100% {
-        max-height: 27.57vw;
-        height: fit-content;
-    }
-    
-    }
 
 /* Dropdown Activated */
 
@@ -245,9 +234,7 @@ form {
     opacity: 0.5;
 }
 
-.dropdown__activated header i {
-    transform: rotate(180deg);
-}
+
 
 /* GALLERY */
 
