--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,47 @@ form {
 
 /* FILTERS */
 
+.filters {
+    display: flex;
+    flex-direction: row;
+    gap: 0.97vw;
+    padding-top: 1vw;
+    flex-wrap: wrap;
+}
+
+.tag {
+    height: fit-content;
+    width: fit-content;
+    padding: 0.7vw 1.39vw;
+    font-size: 0.97vw;
+    color: #FFF;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 0.97vw;
+}
+
+.tag i {
+    font-size: 1.39vw;
+}
+
+.tag i:hover {
+    cursor: pointer;
+}
+
+.tag__ingredient {
+    background-color: #3282F7;
+}
+
+.tag__appareil {
+    background-color: #68D9A4;
+}
+
+.tag__ustensil {
+    background-color: #ED6454;
+}
+
 /* DROPDOWN MENUS */
 
 .filters__menus {
