--- a/css/styles.css
+++ b/css/styles.css
@@ -221,8 +221,19 @@ form {
 .dropdown__list {
     padding: 0.2vw 1.39vw 1.39vw 1.39vw;
     max-height: 21.9vw;
-    overflow: hidden;
+    overflow-y: scroll;
 }
+
+.dropdown__list::-webkit-scrollbar {
+    background: transparent;
+    opacity: .6;
+  }
+
+  .dropdown__list::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, .4);
+    border-radius: 5px;
+    opacity: .6;
+  }
 
 .dropdown__list ul {
     display: grid;
